--- a/build.gradle
+++ b/build.gradle
@@ -10,17 +10,20 @@ buildscript {
   }
   dependencies {
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+    classpath "com.google.protobuf:protobuf-gradle-plugin:$protobufPluginVersion"
   }
 }
 
 plugins {
   id("io.ktor.plugin") version "2.3.8"
+  id("com.google.protobuf") version "0.9.4"
 }
 
 allprojects {
   apply plugin: 'eclipse'
   apply plugin: 'idea'
   apply plugin: 'io.ktor.plugin'
+  apply plugin: 'com.google.protobuf'
 }
 
 application {
@@ -30,7 +33,7 @@ application {
 configure(subprojects) {
   apply plugin: 'java-library'
   apply plugin: 'kotlin'
-
+  apply plugin: 'java'
   repositories {
     mavenCentral() // Or any other repository you're using
   }
